--- a/Member Area Test/Views/Validate.cshtml
+++ b/Member Area Test/Views/Validate.cshtml
@@ -3,6 +3,6 @@
     Layout = "Master.cshtml";
 }
 <div class="body">
-    @CurrentPage.Content
+    @Html.Action("MvcMemberValidateRenderForm", "MvcMemberSurface")
 
 </div>
