--- a/Member Area Test/Views/Login.cshtml
+++ b/Member Area Test/Views/Login.cshtml
@@ -1,4 +1,8 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage
 @{
-    Layout = null;
+    Layout = "Master.cshtml";
 }
+<div class="body">
+    @Html.Action("MvcMemberLoginRenderForm", "MvcMemberSurface")
+
+</div>
