--- a/Member Area Test/Views/Text.cshtml
+++ b/Member Area Test/Views/Text.cshtml
@@ -1,6 +1,6 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage
 @{
-    Layout = "Home.cshtml";
+    Layout = "Master.cshtml";
 }
 
 <div class="body">
